feat: Update all GitHub URL references to kobkob organization
- Updated package.json homepage URL
- Updated SETUP.md clone and issue URLs
- Updated CONTRIBUTING.md repository and issue URLs
- Updated README.md CI badge and clone URLs
- Updated wordpress-plugin-template.php Plugin URI
- Updated create-plugin.sh default plugin URI and GitHub API URLs
- Updated build-plugin.sh clone URL
- Updated readme.txt contributor and donate link
- Updated lang/wordpress-plugin-template.pot Plugin URI

All references now point to https://github.com/kobkob/WordPress-Plugin-Template
instead of various username placeholders or the original hlashbrooke URLs.

--- a/lang/wordpress-plugin-template.pot
+++ b/lang/wordpress-plugin-template.pot
@@ -395,7 +395,7 @@ msgid "WordPress Plugin Template"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://www.hughlashbrooke.com/"
+msgid "https://github.com/kobkob/WordPress-Plugin-Template"
 msgstr ""
 
 #. Author of the plugin/theme
